--- a/src/styles/toast.css
+++ b/src/styles/toast.css
@@ -17,17 +17,17 @@
 }
 .toastMessage.success {
   background: #106a25; /* green */
-  bottom: 70px !important;
+  bottom: 80px !important;
 
 }
 
 .toastMessage.error {
   background: #9a1321; /* red */
-  bottom: 70px !important;
+  bottom: 80px !important;
 }
 
 .toastMessage.warn {
   background: #ed8830; /* yellow */
-  bottom: 105px !important;
+  bottom: 115px !important;
 
 }
